--- a/package.json
+++ b/package.json
@@ -39,13 +39,18 @@
   },
   "dependencies": {
     "immutable": "^3.8.1",
+    "material-ui": "^0.15.4",
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.3",
     "react-dom": "^15.3.1",
     "react-redux": "^4.4.5",
+    "react-router-redux": "^4.0.6",
+    "react-sanfona": "0.0.15",
+    "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.6.0",
     "redux-action": "^1.0.0",
     "redux-actions": "^0.12.0",
-    "redux-immutable": "^3.0.8"
+    "redux-immutable": "^3.0.8",
+    "redux-logger": "^2.6.1"
   }
 }
