--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "webpack-dev-server": "^1.16.1"
   },
   "dependencies": {
+    "es6-promise": "^4.0.5",
     "immutable": "^3.8.1",
+    "isomorphic-fetch": "^2.2.1",
     "material-ui": "^0.15.4",
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.3",
@@ -50,7 +52,10 @@
     "redux": "^3.6.0",
     "redux-action": "^1.0.0",
     "redux-actions": "^0.12.0",
+    "redux-form": "^6.0.5",
     "redux-immutable": "^3.0.8",
-    "redux-logger": "^2.6.1"
+    "redux-logger": "^2.6.1",
+    "redux-promise": "^0.5.3",
+    "redux-thunk": "^2.1.0"
   }
 }
